Add responsiveness to this website

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <a href="#" class="primary-link btn p-3 contact-link"
+          <a
+            href="#"
+            class="primary-link btn p-3 contact-link"
+            alt="Learn about Yoga project"
             >Launch Yoga App</a
           >
         </div>
@@ -101,7 +104,10 @@
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <a href="#" class="primary-link btn p-3 contact-link"
+          <a
+            href="#"
+            class="primary-link btn p-3 contact-link"
+            alt="Learn about Weather project"
             >Launch Weather App</a
           >
         </div>
@@ -117,7 +123,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yogurt.png" alt="yogurt" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="yogurt project"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="description-app">Yogurt App</h2>
@@ -127,7 +137,10 @@
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <a href="#" class="primary-link btn p-3 contact-link"
+          <a
+            href="#"
+            class="primary-link btn p-3 contact-link"
+            alt="Learn about Yogurt project"
             >Launch Yogurt App</a
           >
         </div>
